# saphir

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  deny.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clippy_check.yml  rust.yml
examples/: basic.rs  basic_controller.rs  custom_controller.rs  http_server.rs  middleware.rs  path.rs
saphir/: Cargo.toml
saphir/examples/: basic.rs  macro.rs
saphir/examples/files_to_serve/: index.html
saphir/examples/files_to_serve/css/: styles.css
saphir/examples/files_to_serve/js/: scripts.js
saphir/src/: body.rs  controller.rs  cookie.rs  error.rs  extension.rs  guard.rs  handler.rs  http_context.rs  lib.rs  macros.rs  middleware.rs  redirect.rs  request.rs  responder.rs  response.rs  router.rs  runtime.rs  server.rs  utils.rs
saphir/src/file/: cache.rs  conditional_request.rs  content_range.rs  etag.rs  middleware.rs  mod.rs  range.rs  range_requests.rs
saphir/src/multipart/: mod.rs  parser.rs
saphir_cli/: Cargo.toml
saphir_cli/src/: docgen.rs  main.rs  openapi.rs
saphir_cli/src/docgen/: controller_info.rs  handler_info.rs  mod.rs  response_info.rs  route_info.rs  rust_module.rs  type_info.rs  utils.rs
saphir_cli/src/docgen/crate_syn_browser/: browser.rs  file.rs  item.rs  mod.rs  module.rs  package.rs  target.rs
saphir_cli/src/openapi/: mod.rs  schema.rs
saphir_cli/src/openapi/generate/: controller_info.rs  handler_info.rs  mod.rs  response_info.rs  route_info.rs  type_info.rs  utils.rs
saphir_cli/src/openapi/generate/crate_syn_browser/: browser.rs  file.rs  item.rs  mod.rs  module.rs  package.rs  target.rs
saphir_macro/: Cargo.toml
saphir_macro/src/: controller.rs  handler.rs  lib.rs  utils.rs
saphir_macro/src/controller/: controller_attr.rs  handler.rs  mod.rs
saphir_macro/src/guard/: fun.rs  mod.rs
saphir_macro/src/middleware/: fun.rs  mod.rs
saphir_macro/src/openapi/: mod.rs
src/: body.rs  controller.rs  error.rs  guard.rs  handler.rs  http.rs  http_context.rs  lib.rs  middleware.rs  request.rs  responder.rs  response.rs  router.rs  server.rs  utils.rs
tests/: http_server.rs
website/: docusaurus.config.js  package.json  sidebars.js
website/docs/: controller.md  handlers.md  middleware.md  request.md  response.md  stack.md  start.md  start2.md
website/src/css/: custom.css
website/src/pages/: index.js
