[package]
name = "saphir"
version = "0.9.9"
edition = "2018"
authors = ["richer <richer.arc@gmail.com>"]
description = "Yet another http server framework based on Hyper-rs"
documentation = "https://docs.rs/saphir"
homepage = "https://github.com/richerarc/saphir"
repository = "https://github.com/richerarc/saphir"
readme = "README.md"
keywords = ["hyper", "http", "server", "web"]
license = "MIT"

[features]

default = ["colored_logs"]
request_handler = []
https = ["base64", "rustls", "tokio-rustls"]
colored_logs = ["ansi_term"]

[dependencies]
log = "~0.4.6"
hyper = "~0.12.25"
hyperx = "~0.15.0"
http = "~0.1.21"
futures = "~0.1.25"
regex = "~1.3.1"
tokio = "~0.1.18"
tokio-signal = "0.2.7"
parking_lot = "~0.10.0"
threadpool = "~1.7.1"
hashbrown = "~0.6.0"
num_cpus = "1.10"
cookie = { package = "saphir-cookie", version = "0.13.0" }

ansi_term = { version = "~0.12.0", optional = true }
rustls = { version = "~0.16.0", optional = true }
tokio-rustls = { version = "~0.10.2", optional = true }
base64 = { version = "~0.11.0", optional = true }

[dev-dependencies]
serde_json = "1.0.39"
serde = "1.0.89"
serde_derive = "1.0.89"