[package]
name = "saphir"
version = "0.1.0"
authors = ["Richer Archambault <richer.arc@gmail.com>"]
edition = "2018"

[features]
default = ['json', 'form-url']
json = ['serde', 'serde_json']
form-url = ['serde', 'serde_urlencoded']

[dependencies]
log = "~0.4.6"
env_logger = "0.7"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
futures-util = "0.3.1"
tower-service = "0.3"
cookie = { package = "saphir-cookie", version = "0.13" }
http = "0.2"
parking_lot = "0.10"
regex = "1.3"
serde = {version = "1.0", optional = true}
serde_json = {version = "1.0.40", optional = true}
serde_urlencoded = {version = "0.6.1", optional = true}
lazy_static = "1.4"
unchecked_unwrap = "1.0"

[dev-dependencies]
tokio-timer = "0.2.12"
