[package]
name = "saphir-cli"
version = "0.4.11"
authors = ["Samuel Bergeron-Drouin <kazelone@gmail.com>"]
edition = "2018"
description = "CLI utility for the Saphir web framework"
documentation = "https://docs.rs/saphir"
homepage = "https://github.com/richerarc/saphir"
repository = "https://github.com/richerarc/saphir"
readme = "../README.md"
keywords = ["hyper", "http", "server", "web", "async"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saphir"
path = "src/main.rs"

[dependencies]
syn = { version = "1.0.16", features = ["full", "extra-traits"] }
structopt = { version = "0.3" }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.15"
toml = "0.5.6"
convert_case = "0.4.0"
cargo_metadata = "0.14.0"
lazycell = "1.2.1"
http = "0.2.1"
once_cell = "1.4.1"
regex = "1"
