[package]
name = "saphir-cli"
version = "0.5.1"
authors = ["Samuel Bergeron-Drouin <kazelone@gmail.com>"]
edition = "2021"
description = "CLI utility for the Saphir web framework"
documentation = "https://docs.rs/saphir"
homepage = "https://github.com/richerarc/saphir"
repository = "https://github.com/richerarc/saphir"
readme = "../README.md"
keywords = ["hyper", "http", "server", "web", "async"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "saphir"
path = "src/main.rs"

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
clap = { version = "4.0", features = ["derive"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
toml = "0.6"
convert_case = "0.6"
cargo_metadata = "0.15"
lazycell = "1.2"
http = "0.2"
once_cell = "1.4"
regex = "1.5.5"
