[package]
name = "saphir_macro"
version = "2.1.3"
authors = ["Richer Archambault <richer.arc@gmail.com>"]
edition = "2021"
description = "Macro generation for http server framework"
documentation = "https://docs.rs/saphir"
homepage = "https://github.com/richerarc/saphir"
repository = "https://github.com/richerarc/saphir"
readme = "../README.md"
keywords = ["hyper", "http", "server", "web", "async"]
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "saphir_macro"
proc-macro = true

[features]
default = []
full = ["validate-requests"]
validate-requests = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0.16", features = ["full"] }
http = "0.2"